// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View DescriptionPanel rendering should work w/ full props 1`] = `
<div
  className="nice-panel monster-edit__description"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Description
  </div>
  <div
    className="nice-panel-content"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Campaign
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Some campaign
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value={null}
            onClick={[Function]}
          >
            <a>
              Shared
            </a>
          </li>
          <li
            className="info"
            data-value={2}
            onClick={[Function]}
          >
            <a>
              Some campaign
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type={undefined}
        value="Brawler"
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Size
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Medium
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="tiny"
            onClick={[Function]}
          >
            <a>
              Tiny
            </a>
          </li>
          <li
            className={null}
            data-value="small"
            onClick={[Function]}
          >
            <a>
              Small
            </a>
          </li>
          <li
            className="info"
            data-value="medium"
            onClick={[Function]}
          >
            <a>
              Medium
            </a>
          </li>
          <li
            className={null}
            data-value="large"
            onClick={[Function]}
          >
            <a>
              Large
            </a>
          </li>
          <li
            className={null}
            data-value="huge"
            onClick={[Function]}
          >
            <a>
              Huge
            </a>
          </li>
          <li
            className={null}
            data-value="gargantuan"
            onClick={[Function]}
          >
            <a>
              Gargantuan
            </a>
          </li>
        </ul>
      </div>
      <span
        className="nice-input-addon"
      >
        Type
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Type...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Aberration"
            onClick={[Function]}
          >
            <a>
              Aberration
            </a>
          </li>
          <li
            className={null}
            data-value="Beast"
            onClick={[Function]}
          >
            <a>
              Beast
            </a>
          </li>
          <li
            className={null}
            data-value="Celestial"
            onClick={[Function]}
          >
            <a>
              Celestial
            </a>
          </li>
          <li
            className={null}
            data-value="Construct"
            onClick={[Function]}
          >
            <a>
              Construct
            </a>
          </li>
          <li
            className={null}
            data-value="Dragon"
            onClick={[Function]}
          >
            <a>
              Dragon
            </a>
          </li>
          <li
            className={null}
            data-value="Elemental"
            onClick={[Function]}
          >
            <a>
              Elemental
            </a>
          </li>
          <li
            className={null}
            data-value="Fey"
            onClick={[Function]}
          >
            <a>
              Fey
            </a>
          </li>
          <li
            className={null}
            data-value="Fiend"
            onClick={[Function]}
          >
            <a>
              Fiend
            </a>
          </li>
          <li
            className={null}
            data-value="Giant"
            onClick={[Function]}
          >
            <a>
              Giant
            </a>
          </li>
          <li
            className={null}
            data-value="Humanoid"
            onClick={[Function]}
          >
            <a>
              Humanoid
            </a>
          </li>
          <li
            className={null}
            data-value="Monstrosity"
            onClick={[Function]}
          >
            <a>
              Monstrosity
            </a>
          </li>
          <li
            className={null}
            data-value="Ooze"
            onClick={[Function]}
          >
            <a>
              Ooze
            </a>
          </li>
          <li
            className={null}
            data-value="Plant"
            onClick={[Function]}
          >
            <a>
              Plant
            </a>
          </li>
          <li
            className={null}
            data-value="Undead"
            onClick={[Function]}
          >
            <a>
              Undead
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Alignment
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Chaotic neutral
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="lawful good"
            onClick={[Function]}
          >
            <a>
              Lawful good
            </a>
          </li>
          <li
            className={null}
            data-value="neutral good"
            onClick={[Function]}
          >
            <a>
              Neutral good
            </a>
          </li>
          <li
            className={null}
            data-value="chaotic good"
            onClick={[Function]}
          >
            <a>
              Chaotic good
            </a>
          </li>
          <li
            className={null}
            data-value="lawful neutral"
            onClick={[Function]}
          >
            <a>
              Lawful neutral
            </a>
          </li>
          <li
            className={null}
            data-value="true neutral"
            onClick={[Function]}
          >
            <a>
              True neutral
            </a>
          </li>
          <li
            className="info"
            data-value="chaotic neutral"
            onClick={[Function]}
          >
            <a>
              Chaotic neutral
            </a>
          </li>
          <li
            className={null}
            data-value="lawful evil"
            onClick={[Function]}
          >
            <a>
              Lawful evil
            </a>
          </li>
          <li
            className={null}
            data-value="neutral evil"
            onClick={[Function]}
          >
            <a>
              Neutral evil
            </a>
          </li>
          <li
            className={null}
            data-value="chaotic evil"
            onClick={[Function]}
          >
            <a>
              Chaotic evil
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Level
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          1
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className="info"
            data-value={1}
            onClick={[Function]}
          >
            <a>
              1
            </a>
          </li>
          <li
            className={null}
            data-value={2}
            onClick={[Function]}
          >
            <a>
              2
            </a>
          </li>
          <li
            className={null}
            data-value={3}
            onClick={[Function]}
          >
            <a>
              3
            </a>
          </li>
          <li
            className={null}
            data-value={4}
            onClick={[Function]}
          >
            <a>
              4
            </a>
          </li>
          <li
            className={null}
            data-value={5}
            onClick={[Function]}
          >
            <a>
              5
            </a>
          </li>
          <li
            className={null}
            data-value={6}
            onClick={[Function]}
          >
            <a>
              6
            </a>
          </li>
          <li
            className={null}
            data-value={7}
            onClick={[Function]}
          >
            <a>
              7
            </a>
          </li>
          <li
            className={null}
            data-value={8}
            onClick={[Function]}
          >
            <a>
              8
            </a>
          </li>
          <li
            className={null}
            data-value={9}
            onClick={[Function]}
          >
            <a>
              9
            </a>
          </li>
          <li
            className={null}
            data-value={10}
            onClick={[Function]}
          >
            <a>
              10
            </a>
          </li>
          <li
            className={null}
            data-value={11}
            onClick={[Function]}
          >
            <a>
              11
            </a>
          </li>
          <li
            className={null}
            data-value={12}
            onClick={[Function]}
          >
            <a>
              12
            </a>
          </li>
          <li
            className={null}
            data-value={13}
            onClick={[Function]}
          >
            <a>
              13
            </a>
          </li>
          <li
            className={null}
            data-value={14}
            onClick={[Function]}
          >
            <a>
              14
            </a>
          </li>
          <li
            className={null}
            data-value={15}
            onClick={[Function]}
          >
            <a>
              15
            </a>
          </li>
          <li
            className={null}
            data-value={16}
            onClick={[Function]}
          >
            <a>
              16
            </a>
          </li>
          <li
            className={null}
            data-value={17}
            onClick={[Function]}
          >
            <a>
              17
            </a>
          </li>
          <li
            className={null}
            data-value={18}
            onClick={[Function]}
          >
            <a>
              18
            </a>
          </li>
          <li
            className={null}
            data-value={19}
            onClick={[Function]}
          >
            <a>
              19
            </a>
          </li>
          <li
            className={null}
            data-value={20}
            onClick={[Function]}
          >
            <a>
              20
            </a>
          </li>
          <li
            className={null}
            data-value={21}
            onClick={[Function]}
          >
            <a>
              21
            </a>
          </li>
          <li
            className={null}
            data-value={22}
            onClick={[Function]}
          >
            <a>
              22
            </a>
          </li>
          <li
            className={null}
            data-value={23}
            onClick={[Function]}
          >
            <a>
              23
            </a>
          </li>
          <li
            className={null}
            data-value={24}
            onClick={[Function]}
          >
            <a>
              24
            </a>
          </li>
          <li
            className={null}
            data-value={25}
            onClick={[Function]}
          >
            <a>
              25
            </a>
          </li>
          <li
            className={null}
            data-value={26}
            onClick={[Function]}
          >
            <a>
              26
            </a>
          </li>
          <li
            className={null}
            data-value={27}
            onClick={[Function]}
          >
            <a>
              27
            </a>
          </li>
          <li
            className={null}
            data-value={28}
            onClick={[Function]}
          >
            <a>
              28
            </a>
          </li>
          <li
            className={null}
            data-value={29}
            onClick={[Function]}
          >
            <a>
              29
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Armor Class
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          10
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className="info"
            data-value={10}
            onClick={[Function]}
          >
            <a>
              10
            </a>
          </li>
          <li
            className={null}
            data-value={11}
            onClick={[Function]}
          >
            <a>
              11
            </a>
          </li>
          <li
            className={null}
            data-value={12}
            onClick={[Function]}
          >
            <a>
              12
            </a>
          </li>
          <li
            className={null}
            data-value={13}
            onClick={[Function]}
          >
            <a>
              13
            </a>
          </li>
          <li
            className={null}
            data-value={14}
            onClick={[Function]}
          >
            <a>
              14
            </a>
          </li>
          <li
            className={null}
            data-value={15}
            onClick={[Function]}
          >
            <a>
              15
            </a>
          </li>
          <li
            className={null}
            data-value={16}
            onClick={[Function]}
          >
            <a>
              16
            </a>
          </li>
          <li
            className={null}
            data-value={17}
            onClick={[Function]}
          >
            <a>
              17
            </a>
          </li>
          <li
            className={null}
            data-value={18}
            onClick={[Function]}
          >
            <a>
              18
            </a>
          </li>
          <li
            className={null}
            data-value={19}
            onClick={[Function]}
          >
            <a>
              19
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Description
      </span>
      <div
        className="markdown-textedit preview"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <textarea
          className="nice-form-control"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Description..."
          rows={5}
          value="Punchy"
        />
        <span
          className="markdown-textedit__preview"
        >
          <p>
            Punchy
          </p>
        </span>
      </div>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;

exports[`View DescriptionPanel rendering should work w/ minimum props 1`] = `
<div
  className="nice-panel monster-edit__description"
  id={undefined}
>
  <div
    className="nice-panel-heading"
  >
    Description
  </div>
  <div
    className="nice-panel-content"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Campaign
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Shared
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className="info"
            data-value={null}
            onClick={[Function]}
          >
            <a>
              Shared
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type={undefined}
        value=""
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Size
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Size...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="tiny"
            onClick={[Function]}
          >
            <a>
              Tiny
            </a>
          </li>
          <li
            className={null}
            data-value="small"
            onClick={[Function]}
          >
            <a>
              Small
            </a>
          </li>
          <li
            className={null}
            data-value="medium"
            onClick={[Function]}
          >
            <a>
              Medium
            </a>
          </li>
          <li
            className={null}
            data-value="large"
            onClick={[Function]}
          >
            <a>
              Large
            </a>
          </li>
          <li
            className={null}
            data-value="huge"
            onClick={[Function]}
          >
            <a>
              Huge
            </a>
          </li>
          <li
            className={null}
            data-value="gargantuan"
            onClick={[Function]}
          >
            <a>
              Gargantuan
            </a>
          </li>
        </ul>
      </div>
      <span
        className="nice-input-addon"
      >
        Type
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Type...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="Aberration"
            onClick={[Function]}
          >
            <a>
              Aberration
            </a>
          </li>
          <li
            className={null}
            data-value="Beast"
            onClick={[Function]}
          >
            <a>
              Beast
            </a>
          </li>
          <li
            className={null}
            data-value="Celestial"
            onClick={[Function]}
          >
            <a>
              Celestial
            </a>
          </li>
          <li
            className={null}
            data-value="Construct"
            onClick={[Function]}
          >
            <a>
              Construct
            </a>
          </li>
          <li
            className={null}
            data-value="Dragon"
            onClick={[Function]}
          >
            <a>
              Dragon
            </a>
          </li>
          <li
            className={null}
            data-value="Elemental"
            onClick={[Function]}
          >
            <a>
              Elemental
            </a>
          </li>
          <li
            className={null}
            data-value="Fey"
            onClick={[Function]}
          >
            <a>
              Fey
            </a>
          </li>
          <li
            className={null}
            data-value="Fiend"
            onClick={[Function]}
          >
            <a>
              Fiend
            </a>
          </li>
          <li
            className={null}
            data-value="Giant"
            onClick={[Function]}
          >
            <a>
              Giant
            </a>
          </li>
          <li
            className={null}
            data-value="Humanoid"
            onClick={[Function]}
          >
            <a>
              Humanoid
            </a>
          </li>
          <li
            className={null}
            data-value="Monstrosity"
            onClick={[Function]}
          >
            <a>
              Monstrosity
            </a>
          </li>
          <li
            className={null}
            data-value="Ooze"
            onClick={[Function]}
          >
            <a>
              Ooze
            </a>
          </li>
          <li
            className={null}
            data-value="Plant"
            onClick={[Function]}
          >
            <a>
              Plant
            </a>
          </li>
          <li
            className={null}
            data-value="Undead"
            onClick={[Function]}
          >
            <a>
              Undead
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Alignment
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Alignment...
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className={null}
            data-value="lawful good"
            onClick={[Function]}
          >
            <a>
              Lawful good
            </a>
          </li>
          <li
            className={null}
            data-value="neutral good"
            onClick={[Function]}
          >
            <a>
              Neutral good
            </a>
          </li>
          <li
            className={null}
            data-value="chaotic good"
            onClick={[Function]}
          >
            <a>
              Chaotic good
            </a>
          </li>
          <li
            className={null}
            data-value="lawful neutral"
            onClick={[Function]}
          >
            <a>
              Lawful neutral
            </a>
          </li>
          <li
            className={null}
            data-value="true neutral"
            onClick={[Function]}
          >
            <a>
              True neutral
            </a>
          </li>
          <li
            className={null}
            data-value="chaotic neutral"
            onClick={[Function]}
          >
            <a>
              Chaotic neutral
            </a>
          </li>
          <li
            className={null}
            data-value="lawful evil"
            onClick={[Function]}
          >
            <a>
              Lawful evil
            </a>
          </li>
          <li
            className={null}
            data-value="neutral evil"
            onClick={[Function]}
          >
            <a>
              Neutral evil
            </a>
          </li>
          <li
            className={null}
            data-value="chaotic evil"
            onClick={[Function]}
          >
            <a>
              Chaotic evil
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Level
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          1
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className="info"
            data-value={1}
            onClick={[Function]}
          >
            <a>
              1
            </a>
          </li>
          <li
            className={null}
            data-value={2}
            onClick={[Function]}
          >
            <a>
              2
            </a>
          </li>
          <li
            className={null}
            data-value={3}
            onClick={[Function]}
          >
            <a>
              3
            </a>
          </li>
          <li
            className={null}
            data-value={4}
            onClick={[Function]}
          >
            <a>
              4
            </a>
          </li>
          <li
            className={null}
            data-value={5}
            onClick={[Function]}
          >
            <a>
              5
            </a>
          </li>
          <li
            className={null}
            data-value={6}
            onClick={[Function]}
          >
            <a>
              6
            </a>
          </li>
          <li
            className={null}
            data-value={7}
            onClick={[Function]}
          >
            <a>
              7
            </a>
          </li>
          <li
            className={null}
            data-value={8}
            onClick={[Function]}
          >
            <a>
              8
            </a>
          </li>
          <li
            className={null}
            data-value={9}
            onClick={[Function]}
          >
            <a>
              9
            </a>
          </li>
          <li
            className={null}
            data-value={10}
            onClick={[Function]}
          >
            <a>
              10
            </a>
          </li>
          <li
            className={null}
            data-value={11}
            onClick={[Function]}
          >
            <a>
              11
            </a>
          </li>
          <li
            className={null}
            data-value={12}
            onClick={[Function]}
          >
            <a>
              12
            </a>
          </li>
          <li
            className={null}
            data-value={13}
            onClick={[Function]}
          >
            <a>
              13
            </a>
          </li>
          <li
            className={null}
            data-value={14}
            onClick={[Function]}
          >
            <a>
              14
            </a>
          </li>
          <li
            className={null}
            data-value={15}
            onClick={[Function]}
          >
            <a>
              15
            </a>
          </li>
          <li
            className={null}
            data-value={16}
            onClick={[Function]}
          >
            <a>
              16
            </a>
          </li>
          <li
            className={null}
            data-value={17}
            onClick={[Function]}
          >
            <a>
              17
            </a>
          </li>
          <li
            className={null}
            data-value={18}
            onClick={[Function]}
          >
            <a>
              18
            </a>
          </li>
          <li
            className={null}
            data-value={19}
            onClick={[Function]}
          >
            <a>
              19
            </a>
          </li>
          <li
            className={null}
            data-value={20}
            onClick={[Function]}
          >
            <a>
              20
            </a>
          </li>
          <li
            className={null}
            data-value={21}
            onClick={[Function]}
          >
            <a>
              21
            </a>
          </li>
          <li
            className={null}
            data-value={22}
            onClick={[Function]}
          >
            <a>
              22
            </a>
          </li>
          <li
            className={null}
            data-value={23}
            onClick={[Function]}
          >
            <a>
              23
            </a>
          </li>
          <li
            className={null}
            data-value={24}
            onClick={[Function]}
          >
            <a>
              24
            </a>
          </li>
          <li
            className={null}
            data-value={25}
            onClick={[Function]}
          >
            <a>
              25
            </a>
          </li>
          <li
            className={null}
            data-value={26}
            onClick={[Function]}
          >
            <a>
              26
            </a>
          </li>
          <li
            className={null}
            data-value={27}
            onClick={[Function]}
          >
            <a>
              27
            </a>
          </li>
          <li
            className={null}
            data-value={28}
            onClick={[Function]}
          >
            <a>
              28
            </a>
          </li>
          <li
            className={null}
            data-value={29}
            onClick={[Function]}
          >
            <a>
              29
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Armor Class
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          10
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
        >
          <li
            className="info"
            data-value={10}
            onClick={[Function]}
          >
            <a>
              10
            </a>
          </li>
          <li
            className={null}
            data-value={11}
            onClick={[Function]}
          >
            <a>
              11
            </a>
          </li>
          <li
            className={null}
            data-value={12}
            onClick={[Function]}
          >
            <a>
              12
            </a>
          </li>
          <li
            className={null}
            data-value={13}
            onClick={[Function]}
          >
            <a>
              13
            </a>
          </li>
          <li
            className={null}
            data-value={14}
            onClick={[Function]}
          >
            <a>
              14
            </a>
          </li>
          <li
            className={null}
            data-value={15}
            onClick={[Function]}
          >
            <a>
              15
            </a>
          </li>
          <li
            className={null}
            data-value={16}
            onClick={[Function]}
          >
            <a>
              16
            </a>
          </li>
          <li
            className={null}
            data-value={17}
            onClick={[Function]}
          >
            <a>
              17
            </a>
          </li>
          <li
            className={null}
            data-value={18}
            onClick={[Function]}
          >
            <a>
              18
            </a>
          </li>
          <li
            className={null}
            data-value={19}
            onClick={[Function]}
          >
            <a>
              19
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Description
      </span>
      <div
        className="markdown-textedit preview"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="markdown-textedit__placeholder"
        >
          Description...
        </span>
        <textarea
          className="nice-form-control"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Description..."
          rows={5}
          value=""
        />
        <span
          className="markdown-textedit__preview"
        />
      </div>
    </div>
    <div
      className="clearfix"
    />
  </div>
</div>
`;
